--- a/Assignment5/Web.config
+++ b/Assignment5/Web.config
@@ -1,94 +1,71 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<appSettings>
-		<!-- turn off unobtrusive validation warnings -->
-		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-	</appSettings>
+  <appSettings>
+    <!-- turn off unobtrusive validation warnings -->
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
+  <system.web>
 
-	<system.web>
-		<!-- show full error details remotely -->
-		<customErrors mode="Off" />
+    <!-- show full error details remotely -->
+    <customErrors mode="Off" />
+    <!-- Forms authentication for Default/Member/Staff pages -->
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login.aspx" timeout="2880" slidingExpiration="true" path="/" />
+    </authentication>
+    <authorization>
+      <allow users="*" />
+    </authorization>
+    <!-- compile and runtime settings -->
+    <compilation debug="true" targetFramework="4.7.2" />
+    <httpRuntime targetFramework="4.7.2" />
+    <sessionState mode="InProc" />
+  </system.web>
+  <system.serviceModel>
+    <!-- service behaviors: metadata + detailed faults -->
+    <behaviors>
+      <serviceBehaviors>
+        <behavior>
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <!-- your WebDownload service hosted here -->
+    <services>
+      <service name="Assignment5.Service1">
+        <!-- SOAP endpoint over HTTP -->
+        <endpoint address="" binding="basicHttpBinding" contract="Assignment5.IService1" />
+        <!-- metadata exchange -->
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+      </service>
+    </services>
+    <!-- allow multiple bindings -->
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+  </system.serviceModel>
+  <system.webServer>
+    <modules>
+      <!-- disable FormsAuth module here so your pages handle it -->
+      <remove name="FormsAuthentication" />
+    </modules>
+    <handlers>
+      <!-- register .svc handler so WCF endpoints activate -->
+      <add name=".svc" path="*.svc" verb="*" type="System.ServiceModel.Activation.ServiceHttpHandlerFactory,               System.ServiceModel.Activation, Version=4.0.0.0,               Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    </handlers>
+  </system.webServer>
+  <runtime>
+    <!-- any binding redirects for third‑party DLLs -->
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 
-		<!-- Forms authentication for Default/Member/Staff pages -->
-		<authentication mode="Forms">
-			<forms
-			  loginUrl="~/Account/Login.aspx"
-			  timeout="2880"
-			  slidingExpiration="true"
-			  path="/" />
-		</authentication>
-		<authorization>
-			<allow users="*" />
-		</authorization>
-
-		<!-- compile and runtime settings -->
-		<compilation debug="true" targetFramework="4.7.2" />
-		<httpRuntime targetFramework="4.7.2" />
-		<sessionState mode="InProc" />
-	</system.web>
-
-	<system.serviceModel>
-		<!-- service behaviors: metadata + detailed faults -->
-		<behaviors>
-			<serviceBehaviors>
-				<behavior>
-					<serviceMetadata httpGetEnabled="true" />
-					<serviceDebug includeExceptionDetailInFaults="true" />
-				</behavior>
-			</serviceBehaviors>
-		</behaviors>
-
-		<!-- your WebDownload service hosted here -->
-		<services>
-			<service name="Assignment5.Service1">
-				<!-- SOAP endpoint over HTTP -->
-				<endpoint
-				  address=""
-				  binding="basicHttpBinding"
-				  contract="Assignment5.IService1" />
-				<!-- metadata exchange -->
-				<endpoint
-				  address="mex"
-				  binding="mexHttpBinding"
-				  contract="IMetadataExchange" />
-			</service>
-		</services>
-
-		<!-- allow multiple bindings -->
-		<serviceHostingEnvironment
-		  aspNetCompatibilityEnabled="true"
-		  multipleSiteBindingsEnabled="true" />
-	</system.serviceModel>
-
-	<system.webServer>
-		<modules>
-			<!-- disable FormsAuth module here so your pages handle it -->
-			<remove name="FormsAuthentication" />
-		</modules>
-		<handlers>
-			<!-- register .svc handler so WCF endpoints activate -->
-			<add
-			  name=".svc"
-			  path="*.svc"
-			  verb="*"
-			  type="System.ServiceModel.Activation.ServiceHttpHandlerFactory, 
-             System.ServiceModel.Activation, Version=4.0.0.0, 
-             Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-		</handlers>
-	</system.webServer>
-
-	<runtime>
-		<!-- any binding redirects for third‑party DLLs -->
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity
-				  name="Newtonsoft.Json"
-				  publicKeyToken="30ad4fe6b2a6aeed"
-				  culture="neutral" />
-				<bindingRedirect
-				  oldVersion="0.0.0.0-13.0.0.0"
-				  newVersion="13.0.0.0" />
-			</dependentAssembly>
-		</assemblyBinding>
-	</runtime>
+  <system.codedom>
+    <compilers>
+      <compiler language="c#;cs;csharp" extension=".cs" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701;612;618" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    </compilers>
+  </system.codedom>
 </configuration>
